# graph-explorer

./: .gitignore  README.md  test_data.json
api/: pyproject.toml
api/sok/graph/explorer/api/model/: graph.py
api/sok/graph/explorer/api/services/: graph.py
block_visualizer/: pyproject.toml
block_visualizer/sok/graph/explorer/data_visualizer/: block_visualizer.py
data_source_plugin_json/: pyproject.toml
data_source_plugin_json/sok/graph/explorer/: asd.py
data_source_plugin_json/sok/graph/explorer/data_source/: data_source_plugin_json.py  main.py  test_data.json
data_source_plugin_xml/: pyproject.toml
data_source_plugin_xml/sok/graph/explorer/: data_source_plugin_xml.py
data_source_plugin_xml/sok/graph/explorer/data_source/: data_source_plugin_xml.py  main.py  test.xml
graph_explorer/: db.sqlite3  test.json  test.xml  test_data.json
graph_explorer/graph_explorer/: asgi.py  settings.py  urls.py  wsgi.py
graph_explorer/templates/: birdview.html
platform/: pyproject.toml
platform/graph_explorer_platform/: apps.py  models.py  search.py  test.json  urls.py  views.py
platform/graph_explorer_platform/templates/: asdasda.js  base.html  birdview.html  main.html  treeview.html
platform/sok/graph/explorer/platform/: platform.py
simple_visualizer/: pyproject.toml
simple_visualizer/sok/graph/explorer/data_visualizer/: simple_visualizer.py
