[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "block-visualizer"
version = "0.1"
description = "Component for visualizing a graph."
dependencies = ["graph-explorer-api==0.1"]

[project.entry-points."graph.data_visualizer"]
block_visualizer = "sok.graph.explorer.data_visualizer.block_visualizer:BlockVisualizer"

[tool.setuptools]
provides = ["sok.graph.explorer.data_visualizer.block_visualizer"]