[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-source-json"
version = "0.1"
description = "Component for loading a graph."
dependencies = ["graph-explorer-api==0.1"]

[project.entry-points."graph.data_source"]
data_source_plugin_json = "sok.graph.explorer.data_source.data_source_plugin_json:JsonDataSourcePlugin"

[tool.setuptools]
provides = ["sok.graph.explorer.data_source.data_source_plugin_json"]