[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-explorer-platform"
version = "0.1"
description = "Platform component for graph explorer."
dependencies = ["graph-explorer-api==0.1"]

[project.optional-dependencies]
test = []

[project.entry-points."console_scripts"]
graph_main = "sok.graph.explorer.platform.platform:main"


